<resources>
    <string name="app_name">FitnessAppSample</string>
    <string name="this_module_still_running_flow">Эта вкладка в процессе разработки</string>
    <string name="error_while_downloading_data">Error while downloading data</string>
    <string name="schedule">Расписание</string>
    <string name="welcome_text_view">Добро пожаловать</string>
    <string name="lessons">Занятия</string>
    <string name="requests">Заявки</string>
    <string name="add_new">Добавить</string>
    <string name="start_chat">Чат</string>
    <string name="more">Еще</string>
</resources>